--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 <body>
 
     <div class="brand">Dr. Stacey L. Camp</div>
-    <div class="address-bar">Associate Professor of Anthropology | University of Idaho | scamp@uidaho.edu</div>
+    <div class="address-bar">| Associate Professor of Anthropology | <p>
+        
+    </p><p>| University of Idaho |</p>
+    <p>| scamp@uidaho.edu |</p></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
