--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <body>
 
     <div class="brand">Dr. Stacey L. Camp</div>
-    <div class="address-bar">| Associate Professor of Anthropology | <p>
+    <div class="address-bar">| Associate Professor of Anthropology | <br>
         
-    </p><p>| University of Idaho |</p>
-    <p>| scamp@uidaho.edu |</p></div>
+    | University of Idaho |<br>
+    | scamp@uidaho.edu |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
