--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <div class="brand">Dr. Stacey L. Camp</div>
     <div class="address-bar">| Associate Professor of Anthropology | <br>
         
-    | University of Idaho |<br>
-    | scamp@uidaho.edu |</div>
+    <br>| University of Idaho |<br>
+    <br>| scamp@uidaho.edu |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
