--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 <body>
 
     <div class="brand">Dr. Stacey L. Camp</div>
-    <div class="address-bar">| Associate Professor of Anthropology | <br>
-        
-    <br>| University of Idaho |<br>
-    <br>| scamp@uidaho.edu |</div>
+    <div class="address-bar">| Associate Professor of Anthropology | scamp@uidaho.edu |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
