--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Dr. Stacey L. Camp</div>
-    <div class="address-bar">| Associate Professor of Anthropology | scamp@uidaho.edu |</div>
+    <div class="address-bar">|scamp@uidaho.edu |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -106,15 +106,10 @@
                         </a>
                     </div>
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
+                        <small>Welcome to </small>
                     </h2>
-                    <h1 class="brand-name">Business Casual</h1>
+                    <h1 class="brand-name">Dr. Stacey L. Camp's Website</h1>
                     <hr class="tagline-divider">
-                    <h2>
-                        <small>By
-                            <strong>Start Bootstrap</strong>
-                        </small>
-                    </h2>
                 </div>
             </div>
         </div>
